--- a/team-details.html
+++ b/team-details.html
@@ -1036,154 +1036,154 @@
         <!--whattappicon-->
         <!-- footer start -->
         <div class="footer position-relative sp_top_250 pink__bg__color" id="footer__area"
-            style="background-image: url(assets/img/footer/footer_1.png);">
+        style="background-image: url(assets/img/footer/footer_1.png);">
 
-            <div class="bastun__brand__badge bastun__brand__badge__footer">
-                <div class="bastun__brand__badge__inner position-relative">
-                    <a href="/">
+        <div class="bastun__brand__badge bastun__brand__badge__footer">
+            <div class="bastun__brand__badge__inner position-relative">
+                <a href="/">
 
-                        <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                        <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
-                    </a>
-                </div>
+                    <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
+                    <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
+                </a>
             </div>
+        </div>
 
-            <div class="container">
-                <div class="footer__wrapper sp_bottom_110">
-                    <div class="row">
-                        <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
-                            <div class="footer__widget footer__left">
-                                <div class="footer__logo">
-                                    <a class="offcanvas__logo_link" href="/">
-                                        <img src="assets/img/logo/full-logo.svg" alt="">
-                                    </a>
-                                </div>
-                                <div class="footer__text">
-                                    <p>Trusted software, web, and app development company delivering innovative
-                                        solutions to empower businesses with cutting-edge technology.</p>
-                                </div>
-                                <div class="footer__icon">
-                                    <ul>
-                                        <li>
-                                            <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
-                                                target="_blank">
-                                                <i class="icofont-facebook"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.instagram.com/digitalmindson/" target="_blank">
-                                                <i class="icofont-instagram"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
-                                                    class="icofont-skype"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.linkedin.com/company/digital-minds-on" target="_blank">
-                                                <i class="icofont-linkedin"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
+        <div class="container">
+            <div class="footer__wrapper sp_bottom_110">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
+                        <div class="footer__widget footer__left">
+                            <div class="footer__logo">
+                                <a class="offcanvas__logo_link" href="/">
+                                    <img src="assets/img/logo/full-logo.svg" alt="">
+                                </a>
                             </div>
-                        </div>
-                        <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up" data-aos-duration="2000">
-                            <div class="footer__widget footer__support">
-                                <div class="footer__menu__title">
-                                    <h6>SUPPORT :</h6>
-                                </div>
-                                <div class="footer__menu">
-                                    <ul>
-                                        <li>
-                                            <a href="/">Home</a>
-                                        </li>
-                                        <li>
-                                            <a href="about">About us</a>
-                                        </li>
-                                        <li>
-                                            <a href="blog">Blog update</a>
-                                        </li>
-                                        <li>
-                                            <a href="services">Our services</a>
-                                        </li>
-                                        <li>
-                                            <a href="team">Team</a>
-                                        </li>
-                                    </ul>
-                                </div>
+                            <div class="footer__text">
+                                <p>Trusted software, web, and app development company delivering innovative
+                                    solutions to empower businesses with cutting-edge technology.</p>
                             </div>
-                        </div>
-                        <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up" data-aos-duration="2500">
-                            <div class="footer__widget footer__quick">
-                                <div class="footer__menu__title">
-                                    <h6>QUICK LINKS :</h6>
-                                </div>
-                                <div class="footer__menu">
-                                    <ul>
-                                        <li>
-                                            <a href="javascript:void(0);">Privacy & policy</a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);">Terms & conditions</a>
-                                        </li>
-                                        <li>
-                                            <a href="faq">FAQ</a>
-                                        </li>
-                                        <li>
-                                            <a href="contact">Customer support</a>
-                                        </li>
-                                        <li>
-                                            <a href="contact">Contact us</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="3000">
-                            <div class="footer__widget footer__right">
-                                <div class="footer__menu__title">
-                                    <h6>Let's discuss your project :</h6>
-                                </div>
-                                <div class="footer__text">
-                                    <p>
-                                        Send us a message or schedule a meeting on WhatsApp below, and let's take the
-                                        first step toward creating your product.</p>
-
-                                </div>
-                                <div class="footer__bottom">
-                                    <a class="default__button" href="contact">CONTACT US</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="copyright">
-
-                    <div class="row align-items-center">
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-12">
-                            <div class="copyright__left">
-                                <p>Copyright © 2024 <a href="/">Digitalminds on.</a> All Right Reserved</p>
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-12">
-                            <div class="copyright__right">
+                            <div class="footer__icon">
                                 <ul>
                                     <li>
-                                        <a href="javascript:avoid()">Privacy & Policy ||</a>
+                                        <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
+                                            target="_blank">
+                                            <i class="icofont-facebook"></i>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a href="javascript:avoid()">Terms & Conditions</a>
+                                        <a href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                            <i class="icofont-instagram"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
+                                                class="icofont-skype"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/company/digital-minds-on" target="_blank">
+                                            <i class="icofont-linkedin"></i>
+                                        </a>
                                     </li>
                                 </ul>
-
                             </div>
                         </div>
                     </div>
+                    <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up" data-aos-duration="2000">
+                        <div class="footer__widget footer__support">
+                            <div class="footer__menu__title">
+                                <h6>SUPPORT :</h6>
+                            </div>
+                            <div class="footer__menu">
+                                <ul>
+                                    <li>
+                                        <a href="/">Home</a>
+                                    </li>
+                                    <li>
+                                        <a href="about">About us</a>
+                                    </li>
+                                    <li>
+                                        <a href="blog">Blog update</a>
+                                    </li>
+                                    <li>
+                                        <a href="services">Our services</a>
+                                    </li>
+                                    <li>
+                                        <a href="team">Team</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up" data-aos-duration="2500">
+                        <div class="footer__widget footer__quick">
+                            <div class="footer__menu__title">
+                                <h6>QUICK LINKS :</h6>
+                            </div>
+                            <div class="footer__menu">
+                                <ul>
+                                    <li>
+                                        <a href="project">Portfolio </a>
+                                    </li>
+                                    <li>
+                                        <a href="seo-services">Seo Services</a>
+                                    </li>
+                                    <li>
+                                        <a href="faq">FAQ</a>
+                                    </li>
+                                    <li>
+                                        <a href="contact">Customer support</a>
+                                    </li>
+                                    <li>
+                                        <a href="contact">Contact us</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="3000">
+                        <div class="footer__widget footer__right">
+                            <div class="footer__menu__title">
+                                <h6>Let's discuss your project :</h6>
+                            </div>
+                            <div class="footer__text">
+                                <p>
+                                    Send us a message or schedule a meeting on WhatsApp below, and let's take the
+                                    first step toward creating your product.</p>
 
+                            </div>
+                            <div class="footer__bottom">
+                                <a class="default__button" href="contact">CONTACT US</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            <div class="copyright">
+
+                <div class="row align-items-center">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-12">
+                        <div class="copyright__left">
+                            <p>Copyright © 2024 <a href="/">Digitalminds on.</a> All Right Reserved</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-12">
+                        <div class="copyright__right">
+                            <ul>
+                                <li>
+                                    <a href="javascript:avoid()">Privacy & Policy ||</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:avoid()">Terms & Conditions</a>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
         </div>
         <!-- footer__section__end -->
 
