--- a/about.html
+++ b/about.html
@@ -935,10 +935,10 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="javascript:void(0);">Privacy & policy</a>
+                                            <a href="project">Portfolio </a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Terms & conditions</a>
+                                            <a href="seo-services">Seo Services</a>
                                         </li>
                                         <li>
                                             <a href="faq">FAQ</a>
@@ -956,13 +956,16 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="3000">
                             <div class="footer__widget footer__right">
                                 <div class="footer__menu__title">
-                                    <h6>SUBSCRIP NEWSLETTER :</h6>
+                                    <h6>Let's discuss your project :</h6>
                                 </div>
-                                <div class="footer__input">
-                                    <input type="text" placeholder="Enter your email:">
+                                <div class="footer__text">
+                                    <p>
+                                        Send us a message or schedule a meeting on WhatsApp below, and let's take the
+                                        first step toward creating your product.</p>
+
                                 </div>
                                 <div class="footer__bottom">
-                                    <a class="default__button" href="javascript:void(0);">SUBSCRIBE NOW</a>
+                                    <a class="default__button" href="contact">CONTACT US</a>
                                 </div>
                             </div>
                         </div>
