--- a/game-development-services.html
+++ b/game-development-services.html
@@ -876,10 +876,10 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="javascript:void(0);">Privacy & policy</a>
+                                            <a href="project">Portfolio </a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Terms & conditions</a>
+                                            <a href="seo-services">Seo Services</a>
                                         </li>
                                         <li>
                                             <a href="faq">FAQ</a>
