--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@
                                             <!-- <li><a href="#">Careers </a></li> -->
                                             <li><a href="blog">BLOG </a></li>
                                             <li><a href="project">Portfolio </a></li>
-                                           
+
 
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="contact">CONTACT
@@ -441,13 +441,15 @@
                                     <div class="team__member__icon">
                                         <ul>
                                             <li>
-                                                <a class="direction__btn" href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
+                                                <a class="direction__btn"
+                                                    href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
                                                     target="_blank">
                                                     <i class="icofont-facebook"></i>
                                                 </a>
                                             </li>
                                             <li>
-                                                <a class="direction__btn" href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                                <a class="direction__btn"
+                                                    href="https://www.instagram.com/digitalmindson/" target="_blank">
                                                     <i class="icofont-instagram"></i>
                                                 </a>
                                             </li>
@@ -463,7 +465,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xl-3 col=lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
+                        <!-- <div class="col-xl-3 col=lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
                             data-aos-duration="2100">
                             <div class="team__member__3__single text-center single__transform">
                                 <div class="team__member__3__single__inner" style="height: 385px;">
@@ -474,13 +476,12 @@
                                         <h6>Mr. Tahir</h6>
                                         <p style="margin-bottom: 0px;">Senior Principal Software Engineer
                                         </p>
-                                        <!-- <p>Co-Founder</p> -->
+                                        <p>Co-Founder</p>
                                     </div>
 
                                 </div>
                             </div>
-                        </div>
-
+                        </div> -->
                         <div class="col-xl-3 col=lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
                             data-aos-duration="2400">
                             <div class="team__member__3__single text-center single__transform">
@@ -493,6 +494,23 @@
                                         <p style="margin-bottom: 0px;">Full Stack Mobile Application Developer</p>
                                         <p>Chief Technology Officer</p>
 
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col=lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
+                            data-aos-duration="2100">
+                            <div class="team__member__3__single text-center single__transform">
+                                <div class="team__member__3__single__inner" style="height: 385px;">
+                                    <div class="team__member__3__img">
+                                        <img src="assets/img/team/daniyal-sb.png" alt="img">
+                                    </div>
+                                    <div class="team__member__name">
+                                        <h6>Mr. Daniyal Amjad</h6>
+                                        <p style="margin-bottom: 0px;">Senior Full Stack React.js Developer
+                                        </p>
+                                        <p>Product Manager</p>
                                     </div>
 
                                 </div>
@@ -760,7 +778,8 @@
 
 
         <!-- blog__section__start -->
-        <div class="blog__3 sp_bottom_200 sp_top_140 special__spacing" style="background-image: url(assets/img/blog/blog__bg_2.png);">
+        <div class="blog__3 sp_bottom_200 sp_top_140 special__spacing"
+            style="background-image: url(assets/img/blog/blog__bg_2.png);">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12" data-aos="fade-up"
