--- a/team.html
+++ b/team.html
@@ -369,7 +369,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
+                    <!-- <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
                         data-aos-duration="1700">
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
@@ -380,12 +380,12 @@
                                     <h6>Mr. Tahir</h6>
                                     <div class="Details">
                                         <p style="margin: 0px;">Principal Software Engineer</p>
-                                        <!-- <p>Co-Founder</p> -->
+                                        <p>Co-Founder</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
                         data-aos-duration="1500">
