--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -327,12 +327,12 @@
                     <div class="col-xl-12">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">UX/UI Design Principles in Modern Mobile Applications</h2>
+                                <h2 class="heading">UI/UX Design Principles in Modern Mobile Applications</h2>
                             </div>
                             <div class="herobanner__text">
                                 <p class="banner-width" style="max-width: 950px;">Transform your ideas into exceptional
                                     user experiences with Digital Minds On. Our team of 150+ experts, including
-                                    designers, UX/UI specialists, and engineers, brings 20+ years of experience to
+                                    designers, UI/UX specialists, and engineers, brings 20+ years of experience to
                                     create intuitive, innovative designs that drive success. Partner with us to bring
                                     your vision to life.</p>
                             </div>
@@ -478,7 +478,7 @@
                     <div class="col-xl-8 col-lg-8 col-md-12 col-12">
                         <div class="service__details__wraper">
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Affordable UX/UI Design Service</h4>
+                                <h4>Affordable UI/UX Design Service</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>Digital Minds On is the best UX design agency because it fully comprehends the fact
