--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -10,7 +10,7 @@
         content="Digital marketing tailored to inspire digital minds on. Our experts are here to strengthen your brand’s presence and help you thrive in the competitive online landscape.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/icon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
