--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -476,9 +476,6 @@
                     </div>
                     <div class="col-xl-8 col-lg-8 col-md-12 col-12">
                         <div class="service__details__wraper">
-                            <div class="service__details__img" data-aos="fade-up" data-aos-duration="1500">
-                                <img src="assets/img/service/service__details__1.png" alt="">
-                            </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h2>WordPress Development</h2>
                             </div>
@@ -578,8 +575,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/WordPress Specialist/Theme Development.png"
-                                        class="img-fluid rounded-start" alt="img">
+                                    <img src="assets/img/service/WordPress Specialist/Theme Development.png" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
