home page images compress or extra page remove

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/team/slider/main-1.png" alt="Hero Banner">
+                                            <img src="assets/img/team/slider/main-1.webp" alt="Hero Banner">
                                         </div>
                                     </div>
                                 </div>
@@ -394,7 +394,7 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/team/slider/main-3.png" alt="Hero Banner">
+                                            <img src="assets/img/team/slider/main-3.webp" alt="Hero Banner">
                                         </div>
                                     </div>
                                 </div>
@@ -423,7 +423,7 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/team/slider/main-4.png" alt="img">
+                                            <img src="assets/img/team/slider/main-4.webp" alt="img">
                                         </div>
                                     </div>
                                 </div>
@@ -476,7 +476,7 @@
                 <div class="about-section d-flex flex-column align-items-center text-center">
                     <div class="row align-items-center">
                         <div class="col-md-4  aos-init aos-animate">
-                            <img src="assets/img/herobaner/herobanner__6.png" data-tilt
+                            <img src="assets/img/herobaner/herobanner__6.webp" data-tilt
                                 style="will-change: transform; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);"
                                 alt="Healthcare professionals" class="img-fluid">
                         </div>
@@ -554,7 +554,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="assets/img/services-home/soft.jpg" class="img-fluid rounded-start"
+                                            <img src="assets/img/services-home/soft-min.jpg" class="img-fluid rounded-start"
                                                 alt="img">
                                         </div>
                                         <div class="col-md-8">
@@ -753,7 +753,7 @@
                 <div class="row">
                     <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="about__img__wrapper position-relative" data-tilt>
-                            <img class="about__img__1" src="assets/img/project/combine-pic.png" alt="img">
+                            <img class="about__img__1" src="assets/img/project/combine-pic.webp" alt="img">
                             <div class="about__number">
                                 <div class="about__number__inner about__number__position">
                                     <span>03</span>
@@ -973,7 +973,7 @@
                     <div class="col-md-6">
                         <div class="contact__input__wrapper" style="padding: 0px; position: relative; border: none;" data-aos="fade-up" data-aos-duration="2000">
                             <div class="contact-bg-overlay"></div>
-                            <img src="assets/img/home-service/contact-pic.png" alt="img"
+                            <img src="assets/img/home-service/contact-pic.webp" alt="img"
                                 style="width: 100%; border-radius: 20px;">
                         </div>
                         <!-- contact form -->
