--- a/team.html
+++ b/team.html
@@ -548,7 +548,7 @@
                     <div class="team__member__3__single text-center team__member__border single__transform">
                         <div class="team__member__3__single__inner" style="height: 385px;">
                             <div class="team__member__3__img">
-                                <img src="assets/img/service/Kashif.png" alt="">
+                                <img src="assets/img/team/Kashif.png" alt="img">
                             </div>
                             <div class="team__member__name">
                                 <h6>Mr. Kashif</h6>
@@ -578,7 +578,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/Shoaib.png" alt="">
+                                    <img src="assets/img/team/Shoaib.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Shoaib Jamil</h6>
@@ -593,7 +593,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/saif-content.png" alt="">
+                                    <img src="assets/img/team/saif-content.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Saif</h6>
@@ -608,7 +608,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/service/Mr-Saim.png" alt="">
+                                    <img src="assets/img/team/Mr-Saim.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Saim</h6>
@@ -622,7 +622,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/service/Waleed.png" alt="">
+                                    <img src="assets/img/team/Waleed.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Waleed</h6>
