service page images conpress

--- a/services.html
+++ b/services.html
@@ -371,7 +371,7 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/web.png" alt="img">
+                                    <img src="assets/img/service/services_2/web.webp" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
@@ -406,7 +406,7 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/app.png" alt="img">
+                                    <img src="assets/img/service/services_2/app.webp" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
@@ -442,7 +442,7 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/soft.png" alt="">
+                                    <img src="assets/img/service/services_2/soft.webp" alt="">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
@@ -476,7 +476,7 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/game.png" alt="img">
+                                    <img src="assets/img/service/services_2/game.webp" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
@@ -511,7 +511,7 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/wordspp.png" alt="">
+                                    <img src="assets/img/service/services_2/wordspp.webp" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
@@ -546,7 +546,7 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/1t.png" alt="">
+                                    <img src="assets/img/service/services_2/1t.webp" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
@@ -580,7 +580,7 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/uiux.png" alt="">
+                                    <img src="assets/img/service/services_2/uiux.webp" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
@@ -613,7 +613,7 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/seo.png" alt="img">
+                                    <img src="assets/img/service/services_2/seo.webp" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
@@ -646,7 +646,7 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/_con.png" alt="">
+                                    <img src="assets/img/service/services_2/_con.webp" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
@@ -723,7 +723,7 @@
                                             <img src="assets/img/testimonial/testimonial__4.png" alt="img">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Mattie Warner</a></h6>
+                                            <h6> Warner</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -752,7 +752,7 @@
                                             <img src="assets/img/testimonial/testimonial__5.png" alt="img">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Kristin Gilbert</a></h6>
+                                            <h6>Kristin Gilbert</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -780,7 +780,7 @@
                                             <img src="assets/img/testimonial/testimonial__6.png" alt="img">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Arlene Miles</a></h6>
+                                            <h6>Arlene Miles</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -808,7 +808,7 @@
                                             <img src="assets/img/testimonial/testimonial__7.jpg" alt="img">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Richard W. Thomas</a></h6>
+                                            <h6>Richard W. Thomas</h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -837,7 +837,7 @@
                                             <img src="assets/img/testimonial/1724692476765.jpg" alt="img">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Shelley Zalis</a></h6>
+                                            <h6>Shelley Zalis</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
