--- a/software-development-services.html
+++ b/software-development-services.html
@@ -600,7 +600,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Software Development/CodingDevelopment.png"
+                                    <img src="assets/img/service/Software Development/CodingDevelopment.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -618,7 +618,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Software Development/Deployment.png"
+                                    <img src="assets/img/service/Software Development/Deployment.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -635,7 +635,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Software Development/Maintenance & Updates.png"
+                                    <img src="assets/img/service/Software Development/Maintenance & Updates.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -654,7 +654,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Software Development/Requirements Gathering.png"
+                                    <img src="assets/img/service/Software Development/Requirements Gathering.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -673,7 +673,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Software Development/System Design.png"
+                                    <img src="assets/img/service/Software Development/System Design.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
@@ -691,7 +691,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Software Development/Testing.png"
+                                    <img src="assets/img/service/Software Development/Testing.webp"
                                         class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
