--- a/web-development-services.html
+++ b/web-development-services.html
@@ -331,7 +331,7 @@
                                 <div class="herobanner__text">
                                     <p style="max-width: 950px;"> Digital Minds On, a leading web development company,
                                         to
-                                        create high-performance websites. We specialize in custom UX/UI design, complex
+                                        create high-performance websites. We specialize in custom UI/UX design, complex
                                         animations, and optimization for enhanced user experience, search, and
                                         conversions. Our end-to-end services ensure seamless integration and
                                         functionality across all platforms, driving success. </p>
@@ -614,7 +614,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="img">
+                                    <img src="assets/img/service/web-developement/33.webp" class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -633,7 +633,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/web image/coding.jpg" class="img-fluid rounded-start"
+                                    <img src="assets/img/web image/coding.webp" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -750,7 +750,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/web image/maintance.jpg" class="img-fluid rounded-start"
+                                    <img src="assets/img/web image/maintance.webp" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -771,7 +771,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/web image/ui.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/web image/ui.webp" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
